gen/GymlangParser.java
// Generated from /Users/minlee/Desktop/SCHOOL/SPRING25/Lang Structure/ProjectGymLang/P03_DavidLee/ANTLR/Gymlang.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class GymlangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, MULTILINE_COMMENT=2, EQUAL=3, OCB=4, CCB=5, OP=6, CP=7, DOT=8, 
		COMMA=9, COL=10, DASH=11, PLUS=12, MUSCLE_GROUP=13, GYM=14, START_PROGRAM=15, 
		END=16, TPS=17, DPW=18, VOLUME=19, REST=20, SETS=21, SET=22, MIN=23, USE=24, 
		DSET=25, ASET=26, CHANGE=27, TO=28, WITH=29, WEEK=30, DAY=31, DEFSET=32, 
		WEIGHT=33, REPS=34, NAME=35, NUMBER=36, WS=37;
	public static final int
		RULE_stmt = 0, RULE_muscleGroup = 1, RULE_muscleList = 2, RULE_gym = 3, 
		RULE_exerciseDefinition = 4, RULE_defSet = 5, RULE_setDef = 6, RULE_setLine = 7, 
		RULE_setDefExpr = 8, RULE_editSetDef = 9, RULE_block = 10, RULE_progGoal = 11, 
		RULE_sessionLen = 12, RULE_daysPerWeek = 13, RULE_volumeGoal = 14, RULE_muscleVolume = 15, 
		RULE_dayPlan = 16, RULE_dayBody = 17, RULE_exercise = 18, RULE_restTime = 19, 
		RULE_sets = 20, RULE_set = 21, RULE_predefSet = 22, RULE_editSet = 23, 
		RULE_editAction = 24, RULE_removeSet = 25, RULE_addSet = 26, RULE_changeSet = 27, 
		RULE_oldSet = 28, RULE_newSet = 29, RULE_weekPlan = 30, RULE_weekBody = 31, 
		RULE_days = 32, RULE_dayAssignment = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"stmt", "muscleGroup", "muscleList", "gym", "exerciseDefinition", "defSet", 
			"setDef", "setLine", "setDefExpr", "editSetDef", "block", "progGoal", 
			"sessionLen", "daysPerWeek", "volumeGoal", "muscleVolume", "dayPlan", 
			"dayBody", "exercise", "restTime", "sets", "set", "predefSet", "editSet", 
			"editAction", "removeSet", "addSet", "changeSet", "oldSet", "newSet", 
			"weekPlan", "weekBody", "days", "dayAssignment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'='", "'{'", "'}'", "'('", "')'", "'.'", "','", "':'", 
			"'-'", "'+'", "'MuscleGroup'", "'Gym'", "'start program'", "'end'", "'timePerSession'", 
			"'daysPerWeek'", "'volume'", "'rest'", "'sets'", "'Set'", "'minutes'", 
			"'use'", "'- Set'", "'+ Set'", "'change'", "'to'", "'with'", "'Week'", 
			"'Day'", "'defineSet'", "'weight'", "'reps'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "MULTILINE_COMMENT", "EQUAL", "OCB", "CCB", "OP", "CP", 
			"DOT", "COMMA", "COL", "DASH", "PLUS", "MUSCLE_GROUP", "GYM", "START_PROGRAM", 
			"END", "TPS", "DPW", "VOLUME", "REST", "SETS", "SET", "MIN", "USE", "DSET", 
			"ASET", "CHANGE", "TO", "WITH", "WEEK", "DAY", "DEFSET", "WEIGHT", "REPS", 
			"NAME", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gymlang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GymlangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public MuscleGroupContext muscleGroup() {
			return getRuleContext(MuscleGroupContext.class,0);
		}
		public GymContext gym() {
			return getRuleContext(GymContext.class,0);
		}
		public DefSetContext defSet() {
			return getRuleContext(DefSetContext.class,0);
		}
		public TerminalNode START_PROGRAM() { return getToken(GymlangParser.START_PROGRAM, 0); }
		public TerminalNode NAME() { return getToken(GymlangParser.NAME, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(GymlangParser.END, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			muscleGroup();
			setState(69);
			gym();
			setState(70);
			defSet();
			setState(71);
			match(START_PROGRAM);
			setState(72);
			match(NAME);
			setState(73);
			block();
			setState(74);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MuscleGroupContext extends ParserRuleContext {
		public TerminalNode MUSCLE_GROUP() { return getToken(GymlangParser.MUSCLE_GROUP, 0); }
		public TerminalNode OCB() { return getToken(GymlangParser.OCB, 0); }
		public MuscleListContext muscleList() {
			return getRuleContext(MuscleListContext.class,0);
		}
		public TerminalNode CCB() { return getToken(GymlangParser.CCB, 0); }
		public MuscleGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_muscleGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterMuscleGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitMuscleGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitMuscleGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MuscleGroupContext muscleGroup() throws RecognitionException {
		MuscleGroupContext _localctx = new MuscleGroupContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_muscleGroup);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MUSCLE_GROUP:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(MUSCLE_GROUP);
				setState(77);
				match(OCB);
				setState(78);
				muscleList();
				setState(79);
				match(CCB);
				}
				break;
			case GYM:
			case START_PROGRAM:
			case DEFSET:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MuscleListContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(GymlangParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GymlangParser.NAME, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GymlangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GymlangParser.COMMA, i);
		}
		public MuscleListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_muscleList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterMuscleList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitMuscleList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitMuscleList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MuscleListContext muscleList() throws RecognitionException {
		MuscleListContext _localctx = new MuscleListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_muscleList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(NAME);
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(85);
					match(COMMA);
					setState(86);
					match(NAME);
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(92);
				match(COMMA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GymContext extends ParserRuleContext {
		public TerminalNode GYM() { return getToken(GymlangParser.GYM, 0); }
		public TerminalNode NAME() { return getToken(GymlangParser.NAME, 0); }
		public TerminalNode OCB() { return getToken(GymlangParser.OCB, 0); }
		public List<ExerciseDefinitionContext> exerciseDefinition() {
			return getRuleContexts(ExerciseDefinitionContext.class);
		}
		public ExerciseDefinitionContext exerciseDefinition(int i) {
			return getRuleContext(ExerciseDefinitionContext.class,i);
		}
		public TerminalNode CCB() { return getToken(GymlangParser.CCB, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GymlangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GymlangParser.COMMA, i);
		}
		public GymContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gym; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterGym(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitGym(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitGym(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GymContext gym() throws RecognitionException {
		GymContext _localctx = new GymContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_gym);
		int _la;
		try {
			int _alt;
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GYM:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(GYM);
				setState(96);
				match(NAME);
				setState(97);
				match(OCB);
				setState(98);
				exerciseDefinition();
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(99);
						match(COMMA);
						setState(100);
						exerciseDefinition();
						}
						} 
					}
					setState(105);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(106);
					match(COMMA);
					}
				}

				setState(109);
				match(CCB);
				}
				break;
			case START_PROGRAM:
			case DEFSET:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExerciseDefinitionContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GymlangParser.NAME, 0); }
		public TerminalNode OP() { return getToken(GymlangParser.OP, 0); }
		public MuscleListContext muscleList() {
			return getRuleContext(MuscleListContext.class,0);
		}
		public TerminalNode CP() { return getToken(GymlangParser.CP, 0); }
		public ExerciseDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exerciseDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterExerciseDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitExerciseDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitExerciseDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExerciseDefinitionContext exerciseDefinition() throws RecognitionException {
		ExerciseDefinitionContext _localctx = new ExerciseDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_exerciseDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(NAME);
			setState(115);
			match(OP);
			setState(116);
			muscleList();
			setState(117);
			match(CP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefSetContext extends ParserRuleContext {
		public List<TerminalNode> DEFSET() { return getTokens(GymlangParser.DEFSET); }
		public TerminalNode DEFSET(int i) {
			return getToken(GymlangParser.DEFSET, i);
		}
		public List<TerminalNode> NAME() { return getTokens(GymlangParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GymlangParser.NAME, i);
		}
		public List<TerminalNode> OP() { return getTokens(GymlangParser.OP); }
		public TerminalNode OP(int i) {
			return getToken(GymlangParser.OP, i);
		}
		public List<TerminalNode> WEIGHT() { return getTokens(GymlangParser.WEIGHT); }
		public TerminalNode WEIGHT(int i) {
			return getToken(GymlangParser.WEIGHT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GymlangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GymlangParser.COMMA, i);
		}
		public List<TerminalNode> REPS() { return getTokens(GymlangParser.REPS); }
		public TerminalNode REPS(int i) {
			return getToken(GymlangParser.REPS, i);
		}
		public List<TerminalNode> CP() { return getTokens(GymlangParser.CP); }
		public TerminalNode CP(int i) {
			return getToken(GymlangParser.CP, i);
		}
		public List<TerminalNode> OCB() { return getTokens(GymlangParser.OCB); }
		public TerminalNode OCB(int i) {
			return getToken(GymlangParser.OCB, i);
		}
		public List<SetDefContext> setDef() {
			return getRuleContexts(SetDefContext.class);
		}
		public SetDefContext setDef(int i) {
			return getRuleContext(SetDefContext.class,i);
		}
		public List<TerminalNode> CCB() { return getTokens(GymlangParser.CCB); }
		public TerminalNode CCB(int i) {
			return getToken(GymlangParser.CCB, i);
		}
		public DefSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterDefSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitDefSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitDefSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefSetContext defSet() throws RecognitionException {
		DefSetContext _localctx = new DefSetContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEFSET) {
				{
				{
				setState(119);
				match(DEFSET);
				setState(120);
				match(NAME);
				setState(121);
				match(OP);
				setState(122);
				match(WEIGHT);
				setState(123);
				match(COMMA);
				setState(124);
				match(REPS);
				setState(125);
				match(CP);
				setState(126);
				match(OCB);
				setState(127);
				setDef();
				setState(128);
				match(CCB);
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetDefContext extends ParserRuleContext {
		public List<SetLineContext> setLine() {
			return getRuleContexts(SetLineContext.class);
		}
		public SetLineContext setLine(int i) {
			return getRuleContext(SetLineContext.class,i);
		}
		public SetDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterSetDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitSetDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitSetDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetDefContext setDef() throws RecognitionException {
		SetDefContext _localctx = new SetDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_setDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(135);
				setLine();
				}
				}
				setState(138); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SET );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetLineContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(GymlangParser.SET, 0); }
		public TerminalNode OP() { return getToken(GymlangParser.OP, 0); }
		public List<SetDefExprContext> setDefExpr() {
			return getRuleContexts(SetDefExprContext.class);
		}
		public SetDefExprContext setDefExpr(int i) {
			return getRuleContext(SetDefExprContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(GymlangParser.COMMA, 0); }
		public TerminalNode CP() { return getToken(GymlangParser.CP, 0); }
		public SetLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterSetLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitSetLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitSetLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetLineContext setLine() throws RecognitionException {
		SetLineContext _localctx = new SetLineContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_setLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(SET);
			setState(141);
			match(OP);
			setState(142);
			setDefExpr();
			setState(143);
			match(COMMA);
			setState(144);
			setDefExpr();
			setState(145);
			match(CP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetDefExprContext extends ParserRuleContext {
		public TerminalNode WEIGHT() { return getToken(GymlangParser.WEIGHT, 0); }
		public EditSetDefContext editSetDef() {
			return getRuleContext(EditSetDefContext.class,0);
		}
		public TerminalNode REPS() { return getToken(GymlangParser.REPS, 0); }
		public SetDefExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setDefExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterSetDefExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitSetDefExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitSetDefExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetDefExprContext setDefExpr() throws RecognitionException {
		SetDefExprContext _localctx = new SetDefExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_setDefExpr);
		int _la;
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WEIGHT:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(WEIGHT);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DASH || _la==PLUS) {
					{
					setState(148);
					editSetDef();
					}
				}

				}
				break;
			case REPS:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				match(REPS);
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DASH || _la==PLUS) {
					{
					setState(152);
					editSetDef();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EditSetDefContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(GymlangParser.PLUS, 0); }
		public TerminalNode NUMBER() { return getToken(GymlangParser.NUMBER, 0); }
		public TerminalNode DASH() { return getToken(GymlangParser.DASH, 0); }
		public EditSetDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_editSetDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterEditSetDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitEditSetDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitEditSetDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EditSetDefContext editSetDef() throws RecognitionException {
		EditSetDefContext _localctx = new EditSetDefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_editSetDef);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				match(PLUS);
				setState(158);
				match(NUMBER);
				}
				break;
			case DASH:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				match(DASH);
				setState(160);
				match(NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public ProgGoalContext progGoal() {
			return getRuleContext(ProgGoalContext.class,0);
		}
		public DayPlanContext dayPlan() {
			return getRuleContext(DayPlanContext.class,0);
		}
		public WeekPlanContext weekPlan() {
			return getRuleContext(WeekPlanContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GymlangListener ) ((GymlangListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GymlangVisitor ) return ((GymlangVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			progGoal();
			setState(164);
			dayPlan();
			setState(165);
			weekPlan();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
